feat: add Folia support (PR #188)

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -7,7 +7,7 @@ name: "DecentHolograms"
 description: ${description}
 version: ${version}
 author: d0by
-
+folia-supported: true
 #commands:
 #  decentholograms:
 #    aliases: [dh, holograms, hologram, holo]
